daemonset_nodesel.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-daemon
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
#      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
#      - key: node-role.kubernetes.io/master
#        operator: Exists
#        effect: NoSchedule
      containers:
      - name: con1
        image: httpd:latest
      nodeSelector:
         cpu: ryzen
