manual-sch.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-man
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   nodeName:  node1
