node-pref-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
   name: node-aff-pref
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
     nodeAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
       - weight: 1
         preference:
           matchExpressions:
           - key: cpu
             operator: In
             values:
             - ryzen
