node-req-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
   name: node-aff-req
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
         - matchExpressions:
           - key: cpu
             operator: In
             values:
             - ryzen
