node-sel.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-node-sel
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   nodeSelector:
       cpu: ryzen
