pod-pref-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pre-aff-pod
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
    podAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 50
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: cpu
              operator: In
              values:
              - dellapp
          topologyKey: topology.kubernetes.io/hostname
