pod-pref-anti-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pre-anti-aff-pod
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - dellapp
          topologyKey: topology.kubernetes.io/hostname
