pod-req-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
   name: req-aff-pod
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - dellapp
        topologyKey: kubernetes.io/hostname
