pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80

---
#apiVersion: v1
#kind: Service
#metadata:
#   name: mypod-svc
#spec:
#   type: NodePort
#   selector:
#     app: myapp
#   ports:
#   - port: 80
#     nodePort: 30123
#
