res-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-1
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     resources:
       limits:
          memory: "256Mi"
          cpu: "1"
       requests:
          memory: "128Mi"
          cpu: "500m"
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
