tol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-tol
   labels: 
      app: myapp
spec: 
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   tolerations:
   - key: "taint"
     operator: "Equal"
     value: "green"
     effect: "NoExecute"
