deploy_vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mydep-vol
    annotations:
      kubernetes.io/change-cause: "first time deploy "
      description: "this is demo"
spec:
   replicas: 1
   selector:
     matchLabels:
      app: myapp
   template:
      metadata: 
        labels:
           app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /data/log
        - name: con2
          image: tomcat:latest
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: myvol
            mountPath: /data
        volumes:
        - name: myvol
          emptyDir: {}


---
---
apiVersion: v1
kind: Service
metadata:
   name: mypod-svc
spec:
   type: NodePort
   selector:
     app: myapp
   ports:
   - port: 80
     nodePort: 30123
