replicaset.yaml
apiVersion: v1
kind: Service
metadata:
   name: mypod-svc
spec:
   type: NodePort
   selector:
     app: myapp
   ports:
   - port: 80
     nodePort: 30123
