test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-pod
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30124
  selector:
    run: test-pod
---
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-pod
  name: test-pod
spec:
  containers:
  - image: httpd
    name: test-pod
    ports:
    - containerPort: 80
